--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.0.0",
     "bumpp": "latest",
     "prettier": "latest",
+    "puppeteer": "^17.1.0",
     "turbo": "latest",
     "typescript": "^4.8.2",
     "unbuild": "^0.8.10",
