--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
+    "build": "turbo run build --filter=!playground",
+    "build:play": "turbo run build",
     "dev": "turbo run dev --parallel",
     "format": "prettier --write src/**/*.ts",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public",
