fix(CI): install chrome

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,9 @@ jobs:
           cache: pnpm
 
       - name: Install
-        run: pnpm install
+        run: |
+          pnpm install
+          npx playwright install
 
       - name: Build
         run: pnpm build:play
