--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "turbo run build --filter=!playground",
     "build:play": "turbo run build",
     "dev": "turbo run dev --parallel",
-    "format": "prettier --write src/**/*.ts",
+    "format": "prettier --write packages/**/*.ts playground/**/*.ts",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public",
     "test": "turbo run test:ci",
     "typecheck": "turbo run typecheck",
